setnewwinprops (0.5) unstable; urgency=low

  * 

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Mon, 19 Sep 2022 14:37:40 +0200

setnewwinprops (0.4) unstable; urgency=low

  * write debug messages in verbose level.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sun, 18 Sep 2022 17:37:40 +0200

setnewwinprops (0.3) unstable; urgency=low

  * implement more window properties.
  * some code improvements.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sat, 17 Sep 2022 20:37:40 +0200

setnewwinprops (0.2) unstable; urgency=low

  * Define objects:
    Rules and Windows
  * Rename variables and functions according to the name of the related objects.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Fri, 16 Sep 2022 10:37:40 +0200

setnewwinprops (0.1) unstable; urgency=low

  * Change window properties for opening windows
    according to a set of configurable rules.
  * Initial Release.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Tue, 30 Aug 2022 10:37:40 +0200

Local variables:
mode: debian-changelog
End: